ember-bdi/tests/macros/compile-fail/percept_unknown_action.rs
extern crate alloc;
use ember::agent::bdi::literal::IntoLiteral;
use ember::agent::bdi::sensor::Percept;

#[derive(IntoLiteral, Percept)]
#[ember(percept(frobnicate))]
struct Bad;

fn main() {}
