ember-bdi/tests/macros/compile-fail/percept_unknown_action.stderr
error: unknown percept action, expected `add`, `add(..)`, `remove`, `remove(..)`, or `ignore`
 --> tests/macros/compile-fail/percept_unknown_action.rs:6:17
  |
6 | #[ember(percept(frobnicate))]
  |                 ^^^^^^^^^^
